Refactor: Production-ready automatic scraping system
- Add Docker support with docker-compose.yml and Dockerfile
- Implement automatic job scraping on container startup
- Add vector-based matching with pgvector
- Create comprehensive scraper system for 8+ job boards
- Add Streamlit UI for job matching
- Remove unused API routes and skeleton files
- Update README with complete documentation
- Organize requirements.txt by category
- Enhance .gitignore for production
- Add utility scripts for diagnostics and setup

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # Virtual Environment
 venv/
@@ -26,6 +27,7 @@ env/
 ENV/
 env.bak/
 venv.bak/
+.venv
 
 # Environment variables
 .env
@@ -38,13 +40,44 @@ venv.bak/
 *.swp
 *.swo
 *~
+.spyderproject
+.spyproject
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 
 # Streamlit
 .streamlit/
 
 # Logs
 *.log
+logs/
+*.log.*
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker
+.dockerignore
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
