--- a/env.example
+++ b/env.example
@@ -1,12 +1,28 @@
 # Example environment configuration for FinalProject
 #
-# 1. Copy this file to `.env` in the project root.
-# 2. Replace `your_huggingface_token_here` with your real token from:
-#    https://huggingface.co/settings/tokens
-# 3. Optionally change HF_MODEL to any compatible model on Hugging Face.
+# 1. Copy this file to `.env` in the project root:
+#    cp env.example .env
+#
+# 2. Replace placeholder values with your actual credentials
 #
 # IMPORTANT: Do NOT commit your real `.env` file to git.
+#            The .env file is already in .gitignore
 
+# ============================================================================
+# Database Configuration
+# ============================================================================
+# For Docker: Use 'postgres' as host, port 5432
+# For Local:  Use 'localhost' as host, port 5433 (or your local PostgreSQL port)
+DB_HOST=postgres
+DB_NAME=jobs_db
+DB_USER=postgres
+DB_PASSWORD=your_password_here
+DB_PORT=5432
+
+# ============================================================================
+# Hugging Face API Configuration
+# ============================================================================
+# Get your token from: https://huggingface.co/settings/tokens
 HF_TOKEN=your_huggingface_token_here
 HF_MODEL=openai/gpt-oss-120b:groq
 
