Final project cleanup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '3.8'
+# Postgres with pgvector only. Run scraper and Streamlit locally.
+# Start DB:  docker compose up -d
+# Then:      python -m scripts.scheduled_scraper
+#            streamlit run scripts/integrated_job_matcher_app.py
 
 services:
-  # PostgreSQL with pgvector extension
   postgres:
     image: pgvector/pgvector:pg16
     container_name: postgres-vector
@@ -20,48 +22,6 @@ services:
       retries: 5
     restart: unless-stopped
 
-  # Automatic Job Scraper (runs once on container startup)
-  scraper:
-    build: .
-    container_name: job-scraper
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      DB_HOST: postgres
-      DB_NAME: ${DB_NAME:-jobs_db}
-      DB_USER: ${DB_USER:-postgres}
-      DB_PASSWORD: ${DB_PASSWORD:-202211217nour}
-      DB_PORT: 5432
-    volumes:
-      - .:/app
-      - scraper-logs:/app/logs
-    command: python -m scripts.scheduled_scraper
-    restart: "no"  # Run once on startup, don't restart
-    networks:
-      - default
-
-  # Application service (optional - for future web server)
-  # app:
-  #   build: .
-  #   container_name: finalproject-app
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     DB_HOST: postgres
-  #     DB_NAME: ${DB_NAME:-jobs_db}
-  #     DB_USER: ${DB_USER:-postgres}
-  #     DB_PASSWORD: ${DB_PASSWORD:-202211217nour}
-  #     DB_PORT: 5432
-  #   volumes:
-  #     - .:/app
-  #   ports:
-  #     - "8000:8000"
-  #   command: python -m app.main
-
 volumes:
   postgres-data:
-    driver: local
-  scraper-logs:
     driver: local
