--- a/env.example
+++ b/env.example
@@ -11,13 +11,12 @@
 # ============================================================================
 # Database Configuration
 # ============================================================================
-# For Docker: Use 'postgres' as host, port 5432
-# For Local:  Use 'localhost' as host, port 5433 (or your local PostgreSQL port)
-DB_HOST=postgres
+# Postgres runs in Docker; app runs locally → use localhost and host port 5433
+DB_HOST=localhost
 DB_NAME=jobs_db
 DB_USER=postgres
 DB_PASSWORD=your_password_here
-DB_PORT=5432
+DB_PORT=5433
 
 # ============================================================================
 # Hugging Face API Configuration
